--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^7.3.4",
     "lucide-react": "^0.545.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.0",
